# SOK

./: .gitignore  CMakeLists.txt  README.md  SOK.cpp  index.html  server.crt  server.key
Core/: SOK_Header.hpp
Core/mstd/: EpollManager.hpp  fileCache.hpp  function.hpp  iterator.hpp  lockFreeQueue.hpp  string.hpp  threadPool.hpp  vector.hpp  yaml.hpp
Core/protocols/: http.hpp  https.hpp
Core/utils/: Config.hpp  ForkManager.cpp  ForkManager.hpp  Logger.hpp  ProtocolDispatcher.hpp  SiteConfig.hpp  SocketUtils.hpp
Event/: EpollManager.cpp
